# uzh_vamr

./: .gitignore  README.md  main.py  makefile  pyproject.toml
exercise_01/: README.md  pyproject.toml
exercise_01/src/: corners_onto_undistorted_img.py  distort_points.py  draw_cube.py  main.py  plot.py  points_generators.py  project_points.py  transformation_matrix_from_pose_vector.py  transformations.py  undistort_image.py  undistort_image_vectorized.py  utils.py  world_to_pixel.py
exercise_02/: pyproject.toml
exercise_02/src/: draw_camera.py  estimate_pose_dlt.py  main.py  plot_trajectory_3D.py  reproject_points.py
exercise_03/: README.md  pyproject.toml
exercise_03/src/: describe_keypoints.py  main.py  match_descriptors.py  select_keypoints.py  shi_tomasi.py  shi_tomasi_and_harris.py  utils.py
exercise_04/: pyproject.toml
exercise_04/src/: compute_blurred_images.py  compute_descriptors.py  compute_difference_of_gaussians.py  compute_image_pyramid.py  extract_keypoints.py  main.py  utils.py
exercise_05/: pyproject.toml
exercise_05/src/: disparityToPointCloud.py  getDisparity.py  main.py
exercise_06/: makefile  pyproject.toml
exercise_06/src/: arrow_3d.py  decompose_essential_matrix.py  disambiguate_relative_pose.py  draw_camera.py  estimate_essential_matrix.py  fundamental_eight_point_normalized.py  (+5 more)
exercise_07/: README.md  makefile  pyproject.toml
exercise_08/: pyproject.toml
exercise_09/: pyproject.toml
notes/: MULTIPLE_VIEW_GEOMETRY.md
sandbox/: README.md  makefile  pyproject.toml
src/: README.md
utils/: image.py  points.py
(+72 files in other folders)
