[tool.poetry]
name = "uzh_vamr_ex03"
version = "0.1.0"
description = "Exercise 3 of VARM"
authors = [ "Benjamin Labrecque" ]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
cycler = "0.11.0"
fonttools = "4.37.4"
kiwisolver = "1.4.4"
matplotlib = "3.5.3"
numpy = "1.21.6"
opencv-python = "4.6.0.66"
packaging = "21.3"
pillow = "9.2.0"
pyparsing = "3.0.9"
python-dateutil = "2.8.2"
scipy = "1.7.3"
six = "1.16.0"
typing-extensions = "4.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mypy = "^1.1.1"
isort = "^5.12.0"
# Supposedly quite fast, but need to figure out how to make it work with Neovim
ruff = "^0.1.5"
black = "<24.0.0"

[tool.mypy]
files = "src"
strict = true
namespace_packages = true
explicit_package_bases = true

# [tool.isort]
# profile = "black"

[tool.ruff.lint]
select = [
    # pycodestyle
    # "E",
    # Pyflakes
    # "F",
    # pyupgrade
    # "UP",
    # flake8-bugbear
    # "B",
    # flake8-simplify
    # "SIM",
    # isort
    "I",
]
fixable = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
